apps/calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: calibre
spec:
  selector:
    app: calibre
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
      name: http
