apps/calibre/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-ingress
  namespace: calibre
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: 1024k
    nginx.ingress.kubernetes.io/proxy-buffers: 4 512k
    nginx.ingress.kubernetes.io/proxy-buffer-size: 1024k
spec:
  ingressClassName: nginx
  tls:
    - secretName: calibre-tls
      hosts:
        - calibre.boiss.it
  rules:
    - host: calibre.boiss.it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre
                port:
                  name: http
